# rusty-python

./: .editorconfig  .gitattributes  .gitignore  Cargo.toml  README.md  biome.json  license.md  package.json  pnpm-workspace.yaml  rustfmt.toml  tsconfig.base.json
.github/workflows/: rust.yml  typescript.yml
compilers/python/: Cargo.toml  readme.md
compilers/python-ir/: Cargo.toml  readme.md
compilers/python-ir/src/: lib.rs
compilers/python-ir/tests/: ir_test.rs
compilers/python-lsp/: Cargo.toml  readme.md
compilers/python-lsp/src/: lib.rs
compilers/python-macros/: Cargo.toml  readme.md
compilers/python-macros/src/: lib.rs
compilers/python-tools/: Cargo.toml  readme.md
compilers/python-tools/src/: lib.rs
compilers/python-types/: Cargo.toml  readme.md
compilers/python-types/src/: lib.rs
compilers/python-types/tests/: types_test.rs
compilers/python-wasi/: Cargo.toml  readme.md
compilers/python-wasi/src/: lib.rs
compilers/python/src/: codegen.rs  ffi.rs  gc.rs  jit.rs  lib.rs  module.rs  vm.rs
compilers/python/tests/: gc_test.rs  parser_test.rs  vm_test.rs
documentation/en-us/: index.md
documentation/en-us/database/: index.md  mysql.md  pg.md  redis.md  sqlite.md
documentation/en-us/guide/: architecture.md  introduction.md  roadmap.md  xrpc-core.md
documentation/en-us/guide/commands/: backup.md  check.md  compile.md  index.md
documentation/en-us/guide/concepts/: index.md  orm.md  rpc.md  xrpc.md
documentation/en-us/language/: index.md
documentation/en-us/maintenance/: index.md
documentation/zh-hans/: index.md
documentation/zh-hans/guide/: architecture.md  introduction.md
examples/: test_parser.rs
frontends/homepage/: index.html  package.json  tailwind.config.js  tsconfig.json  tsconfig.node.tsbuildinfo  vite.config.js  vite.config.ts
frontends/homepage/src/: App.vue  config.json  main.ts  style.css
frontends/homepage/src/components/: PythonPlayground.vue  index.ts
frontends/homepage/src/utils/: index.ts
frontends/python-ts/: README.md  package.json  tsconfig.json
frontends/python-ts/src/: index.ts
scripts/: build-mvp.mjs  check.mjs
