[package]
name = "python-lsp"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository = "https://github.com/nyar-vm/rusty-python"
description = "Python Language Server Protocol implementation for Rusty Python"

[dependencies]
python-types = { workspace = true }
python-ir = { workspace = true }
serde = { workspace = true, features = ["derive"] }
