[package]
publish = false
name = "python"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Pure Rust implementation of Python runtime environment"
repository = "https://github.com/doki-land/rusty-ssg"
keywords = ["python", "runtime", "language"]
categories = ["development-tools"]

[dependencies]
oak-core = { workspace = true }
oak-vfs = { workspace = true }
oak-python = { workspace = true }
python-types = { workspace = true }
python-ir = { workspace = true }

smallvec = { version = "1.13.2", features = ["serde"] }
serde = { version = "1.0.204", features = ["derive"] }

# JIT compilation dependencies
cranelift = { workspace = true }
cranelift-codegen = { workspace = true }
cranelift-frontend = { workspace = true }
cranelift-module = { workspace = true }
cranelift-jit = { workspace = true }

